--- a/client/src/pages/Profile/profile.scss
+++ b/client/src/pages/Profile/profile.scss
@@ -1,6 +1,7 @@
 @import '../../styles';
 
 .profile {
+  min-height: 100vh;
   background-image: url('../../assets/images/banner-bg.svg');
   background-repeat: no-repeat;
   background-position: left center;
