fix: About page 寬高設定

--- a/client/src/pages/About/about.scss
+++ b/client/src/pages/About/about.scss
@@ -2,120 +2,128 @@
 
 .about {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .banner {
+    width: 100%;
     background-image: url('../../assets/images/banner-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left center;
     padding: 8.5rem 2.5rem 0 2.5rem;
-    @media (max-width: 767px) {
-      padding-left: 1rem;
-      padding-right: 1rem;
+    @media (max-width: 414px) {
+      padding: 8.5rem 0.5rem 0 0.5rem;
     }
+
     .introduction {
       display: flex;
       flex-direction: column;
       text-align: center;
       color: $primary-white;
+      gap: 1rem;
 
       h1 {
-        padding: 0 0 2.5rem 0;
         letter-spacing: 0.1rem;
       }
       p {
-        padding: 0 7.5rem;
         line-height: 1.75rem;
         letter-spacing: 0.05rem;
-        @media (max-width: 767px) {
-          padding: 0;
-        }
       }
       .video-container {
         position: relative;
         bottom: -3rem;
         video {
-          width: 70%;
+          width: 50%;
           border-radius: 1rem;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+          @media (max-width: 414px) {
+            width: 90%;
+          }
         }
       }
     }
   }
-  .founder-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 6rem 2.5rem 3rem 2.5rem;
 
-    text-align: center;
-    .quote-icon {
-      color: $primary-blue;
-      font-size: 3rem;
-    }
-    p {
-      padding: 2.5rem;
-      line-height: 1.5rem;
-      font-weight: 600;
-      letter-spacing: 0.05rem;
-    }
-    .divider {
-      width: 3rem;
-      padding: 0 0 1rem 0;
-    }
-    .founder-name {
-      padding: 0.5rem 0;
-    }
-    .founder-title {
-      color: $font-color;
-    }
-  }
-  .instructors {
-    padding: 5rem 2.5rem;
+  .main-content {
+    width: min(98%, 1200px);
 
-    .instructors-header {
-      padding: 0 0 2rem 0;
-      h6 {
-        padding: 0 0 1.75rem 0;
-        letter-spacing: 0.25rem;
-      }
-    }
-
-    .instructors-cards {
+    .founder-content {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      padding: 6rem 0 3rem 0;
 
-      .card {
-        flex: 1 1 0;
-        margin: 1rem;
+      text-align: center;
+      .quote-icon {
+        color: $primary-blue;
+        font-size: 3rem;
+      }
+      p {
+        padding: 2.5rem 0;
+        line-height: 1.5rem;
+        font-weight: 600;
+        letter-spacing: 0.05rem;
+      }
+      .divider {
+        width: 3rem;
+        padding: 0 0 1rem 0;
+      }
+      .founder-name {
+        padding: 0.5rem 0;
+      }
+      .founder-title {
+        color: $font-color;
+      }
+    }
+    .instructors {
+      padding: 5rem 0;
+
+      .instructors-header {
+        padding: 0 0 2rem 0;
+        h6 {
+          padding: 0 0 1.75rem 0;
+          letter-spacing: 0.25rem;
+        }
+      }
+
+      .instructors-cards {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 1rem;
+        flex-wrap: wrap;
 
-        .instructor-intro {
-          h5 {
-            padding-bottom: 0.5rem;
-          }
-          p {
-            color: $font-color;
-          }
-        }
+        .card {
+          flex: 1 1 0;
+          margin: 1rem;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+          gap: 1rem;
 
-        .instructor-img {
-          img {
-            width: 12rem;
-            border-radius: 50%;
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          .instructor-intro {
+            h5 {
+              padding-bottom: 0.5rem;
+            }
+            p {
+              color: $font-color;
+            }
           }
-        }
 
-        .instructor-contact {
-          .icon {
-            font-size: 1.25rem;
-            padding: 0 0.75rem;
-            cursor: pointer;
+          .instructor-img {
+            img {
+              width: 12rem;
+              border-radius: 50%;
+              box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            }
+          }
+
+          .instructor-contact {
+            .icon {
+              font-size: 1.25rem;
+              padding: 0 0.75rem;
+              cursor: pointer;
+            }
           }
         }
       }
