--- a/client/src/pages/Contact/contact.scss
+++ b/client/src/pages/Contact/contact.scss
@@ -2,16 +2,20 @@
 
 .contact {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  .banner {
-    background-image: url('../../assets/images/banner-bg.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: right bottom;
-    min-height: 100vh;
-    padding: 10rem 5% 5rem 5%;
+  background-image: url('../../assets/images/banner-bg.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right top;
 
-    .content {
+  .main-content {
+    padding: 10rem 0 5rem 0;
+    width: min(98%, 1200px);
+
+    .information-and-form {
       display: flex;
       flex-wrap: wrap;
 
@@ -72,7 +76,7 @@
         flex-direction: column;
         gap: 1.75rem;
 
-        > div {
+        .input-field {
           display: flex;
           flex-direction: column;
           gap: 0.5rem;
@@ -104,6 +108,7 @@
           }
           textarea {
             height: 15rem;
+            resize: none;
           }
         }
 
@@ -121,10 +126,10 @@
       }
     }
   }
-
   .map {
-    display: flex;
+    width: 100%;
     iframe {
+      display: block;
       width: 100%;
       height: 25rem;
       border: none;
