fix: Contact page 高度調整

--- a/client/src/pages/Contact/contact.scss
+++ b/client/src/pages/Contact/contact.scss
@@ -12,7 +12,7 @@
   background-position: right top;
 
   .main-content {
-    padding: 10rem 0 5rem 0;
+    padding: 5rem 0;
     width: min(98%, 1200px);
 
     .information-and-form {
