feat: Private Routes 引入 Modal 並且設定可以控制背景布幕為不透明色

--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -7,7 +7,7 @@
   z-index: z-index('modal');
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: $background-black;
 
   .modal-content {
     width: max(30%, 25rem);
@@ -15,4 +15,8 @@
     border-radius: 1rem;
     background-color: $background-gray;
   }
+}
+
+.covered {
+  background-color: $primary-white;
 }
