fix: Improve All Course User Experience

--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -1,4 +1,5 @@
 @import '../../styles';
+$common-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
 .all-courses {
   min-height: 100vh;
@@ -22,7 +23,7 @@
       background-color: $primary-white;
       padding: 0.75rem 1rem;
       border-radius: 0.75rem;
-      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+      box-shadow: $common-box-shadow;
 
       display: flex;
       align-items: center;
@@ -48,13 +49,13 @@
         line-height: 1.5;
         letter-spacing: 0.05rem;
       }
-    }
-
-    .dividing-line {
-      height: 0.25rem;
-      background-color: $primary-white;
-      border-radius: 0.25rem;
-      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+      .dividing-line {
+        height: 0.25rem;
+        margin: 3rem 0 0 0;
+        background-color: $primary-white;
+        border-radius: 0.25rem;
+        box-shadow: $common-box-shadow;
+      }
     }
   }
 }
