feat: post course form error reminder

--- a/client/src/pages/PostCourse/postCourse.scss
+++ b/client/src/pages/PostCourse/postCourse.scss
@@ -100,11 +100,9 @@
         }
 
         .not-validated {
-          input {
+          input,
+          textarea {
             border: 1px solid $primary-red;
-          }
-          label {
-            color: $primary-red;
           }
         }
       }
