feat: unsubscribe-newletter api

--- a/server/templates/email/forgetPassword.ejs
+++ b/server/templates/email/forgetPassword.ejs
@@ -50,7 +50,7 @@
       <p>Forgot your password?</p>
       <p>We have received a request to reset the password for your account.</p>
       <p>To reset your password, please click on the link below or paste this into your browser to complete the process.</p>
-      <a target="_blank" href="<%= link %>">Reset</a>
+      <a target="_blank" href="#">Reset</a>
       <br />
       <p>This link will work for <span class="time">5 minutes</span> or until your password is reset.</p>
       <p>If you did not ask to change your password, please ignore this email and your account will remain unchanged.</p>
