Refactor: Modal component

--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -14,9 +14,20 @@
     margin: 1rem;
     border-radius: 1rem;
     background-color: $background-gray;
-  }
-}
+    position: relative;
 
-.covered {
-  background-color: $primary-white;
+    // TODO: 在Private Routes時候固定開啟Modal
+    // .close-icon {
+    //   position: absolute;
+    //   top: 1.25rem;
+    //   right: 1rem;
+    //   color: $btn-gray;
+    //   font-size: 2rem;
+    //   cursor: pointer;
+    //   z-index: 1;
+    // }
+    // .hide-close-icon {
+    //   display: none;
+    // }
+  }
 }
