--- a/server/templates/email/resetPassword.ejs
+++ b/server/templates/email/resetPassword.ejs
@@ -15,6 +15,7 @@
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        font-size: 20px;
       }
       h1 {
         text-align: center;
