--- a/client/src/pages/UnsubscribeNewsletter/unsubscribeNewsletter.scss
+++ b/client/src/pages/UnsubscribeNewsletter/unsubscribeNewsletter.scss
@@ -1,21 +1,38 @@
-@import '../../styles/';
+@import '../../styles';
 
 .unsubscribe-content {
-  color: $primary-blue;
-  padding: 1rem;
+  min-height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  h1 {
-    font-size: 1.5rem;
-  }
+  .unsubscribe-content-modal {
+    width: max(40%, 25rem);
+    margin: 1rem;
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+    background-color: $background-gray;
+    color: $primary-blue;
+    text-align: center;
 
-  p {
-    padding: 1rem 0;
-  }
-
-  .btn-container {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 1rem;
+    h1 {
+      font-size: 2rem;
+      @media (max-width: 440px) {
+        font-size: 1.75rem;
+      }
+      padding: 0 0 1.5rem 0;
+    }
+    p {
+      padding: 0 0 3rem 0;
+      letter-spacing: 0.025rem;
+      line-height: 1.25;
+    }
+    .btn-container {
+      display: flex;
+      justify-content: space-around;
+      .unsubscribe-btn {
+        color: $primary-red;
+      }
+    }
   }
 }
