--- a/client/src/components/Button/button.scss
+++ b/client/src/components/Button/button.scss
@@ -10,13 +10,15 @@
   padding: 0.5rem 1rem;
   white-space: nowrap;
   cursor: pointer;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px, #d6d6e7 0 -3px 0 inset;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px, #d6d6e7 0 -3px 0 inset;
   transition: 0.2s;
 
   &:hover {
     background-color: $secondary-yellow;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-      rgba(14, 30, 37, 0.32) 0px 2px 16px 0px, $primary-yellow 0 -3px 0 inset;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px, $primary-yellow 0 -3px 0 inset;
   }
+}
+
+.hide-button {
+  display: none;
 }
