bug/React Warning on browser

--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -27,8 +27,8 @@
     }
 
     // TODO: 在Private Routes時候固定開啟Modal
-    // .hide-close-icon {
-    //   display: none;
-    // }
+    .hide-close-icon {
+      display: none;
+    }
   }
 }
