--- a/client/src/components/Register/register.scss
+++ b/client/src/components/Register/register.scss
@@ -72,6 +72,12 @@
       }
     }
 
+    .alert {
+      color: $primary-red;
+      margin: 0.5rem 0;
+      font-weight: 800;
+    }
+
     .register-btn {
       width: 100%;
       height: 2.75rem;
